hphp/hack/test/typecheck/as_expression/softtype.php.like_types.exp
File "softtype.php", line 6, characters 13-15:
Soft typehints cannot be used with as-expressions (Parsing[1002])
File "softtype.php", line 6, characters 13-16:
Invalid "as" expression hint (Typing[4195])
File "softtype.php", line 6, characters 13-16:
The "as" operator cannot be used with a union
